--- a/notebooks/project_notebook.ipynb
+++ b/notebooks/project_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "silver-renaissance",
+   "id": "computational-adoption",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,21 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "applicable-department",
+   "execution_count": 2,
+   "id": "charitable-activity",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "R[write to console]: Error: cons memory exhausted (limit reached?)\n",
-      "\n",
-      "R[write to console]: Error: no more error handlers available (recursive errors?); invoking 'abort' restart\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Jupyter Lab cell extensions\n",
     "%load_ext rpy2.ipython \n",
@@ -44,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nearby-batch",
+   "id": "informal-election",
    "metadata": {},
    "source": [
     "## 3. Downloading the data"
@@ -53,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "distributed-elephant",
+   "id": "mexican-responsibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "standing-yield",
+   "id": "happy-texture",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "consecutive-preservation",
+   "id": "objective-wilson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "injured-intro",
+   "id": "rapid-accordance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hearing-claim",
+   "id": "governing-kenya",
    "metadata": {},
    "source": [
     "## 4. Combining data CSVs"
@@ -157,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "refined-aberdeen",
+   "id": "lesser-aquatic",
    "metadata": {},
    "source": [
     "### 4.1 & 4.2"
@@ -166,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "pacific-metadata",
+   "id": "taken-hamilton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,15 +165,16 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "generous-custody",
+   "id": "cognitive-credit",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 91.42 MiB, increment: 0.28 MiB\n",
-      "Wall time: 6min 17s\n"
+      "peak memory: 164.31 MiB, increment: 0.02 MiB\n",
+      "CPU times: user 4min 56s, sys: 7.02 s, total: 5min 3s\n",
+      "Wall time: 5min 4s\n"
      ]
     }
    ],
@@ -204,18 +194,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "strategic-cincinnati",
+   "execution_count": 11,
+   "id": "accompanied-ending",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.6G\tfigsharedailyrain/combined_data.csv\n"
+     ]
+    }
+   ],
    "source": [
     "%%sh\n",
-    "du -sh figsharerainfall/combined_data.csv"
+    "du -sh figsharedailyrain/combined_data.csv"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "convinced-depression",
+   "id": "linear-smell",
    "metadata": {},
    "source": [
     "### 4.3 Compare run times and memory usages on different machines\n",
@@ -224,12 +222,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "roman-doctor",
+   "id": "southern-strike",
    "metadata": {},
    "source": [
     "| User | Operating System | Memory | Time |\n",
     "|------|--------|--------|------|\n",
-    "|Chirag| Ubuntu | 152.25 MiB, increment: 0.12 MiB| Wall  time: 9mins 26s|\n",
+    "|Chirag| Ubuntu | 164.31 MiB, increment: 0.02 MiB| Wall  time: 5mins 4s|\n",
     "|Elanor| Windows| 91.42 MiB, increment: 0.28 MiB| Wall time: 6min 17s|\n",
     "| Hazel| Windows| 150.96MiB, increment: 0.06 MiB| Wall time: 6min 8s |\n",
     "| Siqi | MacOS  | 92.05 MiB, increment: 0.28 MiB| Wall time: 7min 40s|"
@@ -237,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parental-mystery",
+   "id": "distributed-faculty",
    "metadata": {},
    "source": [
     "When combining CSV files, the team had range of memory usage of 92-152 MiB, and a range of run time of 6-9 mins across 3 different operating systems.  "
@@ -245,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advised-ground",
+   "id": "referenced-agenda",
    "metadata": {},
    "source": [
     "## 5. Load the combined CSV to memory and perform a simple EDA"
@@ -253,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "natural-desperate",
+   "id": "underlying-simple",
    "metadata": {},
    "source": [
     "### 5.1.1 Loading in chunks"
@@ -261,46 +259,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "scheduled-coordinate",
+   "execution_count": 8,
+   "id": "hearing-token",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ACCESS-CM2           1932840\n",
-      "ACCESS-ESM1-5        1610700\n",
-      "AWI-ESM-1-1-LR        966420\n",
-      "BCC-CSM2-MR          3035340\n",
-      "BCC-ESM1              551880\n",
-      "CMCC-CM2-HR4         3541230\n",
-      "CMCC-CM2-SR5         3541230\n",
-      "CMCC-ESM2            3541230\n",
-      "CanESM5               551880\n",
-      "EC-Earth3-Veg-LR     3037320\n",
-      "FGOALS-f3-L          3219300\n",
-      "FGOALS-g3            1287720\n",
-      "GFDL-CM4             3219300\n",
-      "GFDL-ESM4            3219300\n",
-      "INM-CM4-8            1609650\n",
-      "INM-CM5-0            1609650\n",
-      "KIOST-ESM            1287720\n",
-      "MIROC6               2070900\n",
-      "MPI-ESM-1-2-HAM       966420\n",
-      "MPI-ESM1-2-HR        5154240\n",
-      "MPI-ESM1-2-LR         966420\n",
-      "MRI-ESM2-0           3037320\n",
-      "NESM3                 966420\n",
-      "NorESM2-LM            919800\n",
-      "NorESM2-MM           3541230\n",
-      "SAM0-UNICON          3541153\n",
-      "TaiESM1              3541230\n",
-      "combined_data       54385075\n",
+      "ACCESS-CM2          1932840\n",
+      "ACCESS-ESM1-5       1610700\n",
+      "AWI-ESM-1-1-LR       966420\n",
+      "BCC-CSM2-MR         3035340\n",
+      "BCC-ESM1             551880\n",
+      "CMCC-CM2-HR4        3541230\n",
+      "CMCC-CM2-SR5        3541230\n",
+      "CMCC-ESM2           3541230\n",
+      "CanESM5              551880\n",
+      "EC-Earth3-Veg-LR    3037320\n",
+      "FGOALS-f3-L         3219300\n",
+      "FGOALS-g3           1287720\n",
+      "GFDL-CM4            3219300\n",
+      "GFDL-ESM4           3219300\n",
+      "INM-CM4-8           1609650\n",
+      "INM-CM5-0           1609650\n",
+      "KIOST-ESM           1287720\n",
+      "MIROC6              2070900\n",
+      "MPI-ESM-1-2-HAM      966420\n",
+      "MPI-ESM1-2-HR       5154240\n",
+      "MPI-ESM1-2-LR        966420\n",
+      "MRI-ESM2-0          3037320\n",
+      "NESM3                966420\n",
+      "NorESM2-LM           919800\n",
+      "NorESM2-MM          3541230\n",
+      "SAM0-UNICON         3541153\n",
+      "TaiESM1             3541230\n",
       "dtype: int64\n",
-      "peak memory: 9137.07 MiB, increment: 1455.77 MiB\n",
-      "CPU times: user 1min 35s, sys: 7.34 s, total: 1min 42s\n",
-      "Wall time: 1min 45s\n"
+      "peak memory: 6243.19 MiB, increment: 1459.53 MiB\n",
+      "CPU times: user 52.1 s, sys: 3.86 s, total: 55.9 s\n",
+      "Wall time: 57 s\n"
      ]
     }
    ],
@@ -315,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "first-sharp",
+   "id": "magnetic-apache",
    "metadata": {},
    "source": [
     "### 5.1.2 DASK"
@@ -323,46 +320,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "invalid-senate",
+   "execution_count": 9,
+   "id": "sporting-affiliate",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "combined_data       54385075\n",
-      "MPI-ESM1-2-HR        5154240\n",
-      "TaiESM1              3541230\n",
-      "CMCC-CM2-HR4         3541230\n",
-      "CMCC-CM2-SR5         3541230\n",
-      "CMCC-ESM2            3541230\n",
-      "NorESM2-MM           3541230\n",
-      "SAM0-UNICON          3541153\n",
-      "FGOALS-f3-L          3219300\n",
-      "GFDL-CM4             3219300\n",
-      "GFDL-ESM4            3219300\n",
-      "EC-Earth3-Veg-LR     3037320\n",
-      "MRI-ESM2-0           3037320\n",
-      "BCC-CSM2-MR          3035340\n",
-      "MIROC6               2070900\n",
-      "ACCESS-CM2           1932840\n",
-      "ACCESS-ESM1-5        1610700\n",
-      "INM-CM5-0            1609650\n",
-      "INM-CM4-8            1609650\n",
-      "KIOST-ESM            1287720\n",
-      "FGOALS-g3            1287720\n",
-      "MPI-ESM-1-2-HAM       966420\n",
-      "MPI-ESM1-2-LR         966420\n",
-      "NESM3                 966420\n",
-      "AWI-ESM-1-1-LR        966420\n",
-      "NorESM2-LM            919800\n",
-      "CanESM5               551880\n",
-      "BCC-ESM1              551880\n",
+      "MPI-ESM1-2-HR       5154240\n",
+      "TaiESM1             3541230\n",
+      "NorESM2-MM          3541230\n",
+      "CMCC-CM2-HR4        3541230\n",
+      "CMCC-CM2-SR5        3541230\n",
+      "CMCC-ESM2           3541230\n",
+      "SAM0-UNICON         3541153\n",
+      "FGOALS-f3-L         3219300\n",
+      "GFDL-CM4            3219300\n",
+      "GFDL-ESM4           3219300\n",
+      "EC-Earth3-Veg-LR    3037320\n",
+      "MRI-ESM2-0          3037320\n",
+      "BCC-CSM2-MR         3035340\n",
+      "MIROC6              2070900\n",
+      "ACCESS-CM2          1932840\n",
+      "ACCESS-ESM1-5       1610700\n",
+      "INM-CM5-0           1609650\n",
+      "INM-CM4-8           1609650\n",
+      "KIOST-ESM           1287720\n",
+      "FGOALS-g3           1287720\n",
+      "MPI-ESM1-2-LR        966420\n",
+      "NESM3                966420\n",
+      "AWI-ESM-1-1-LR       966420\n",
+      "MPI-ESM-1-2-HAM      966420\n",
+      "NorESM2-LM           919800\n",
+      "BCC-ESM1             551880\n",
+      "CanESM5              551880\n",
       "Name: model, dtype: int64\n",
-      "peak memory: 2396.77 MiB, increment: 1411.14 MiB\n",
-      "CPU times: user 2min 31s, sys: 12 s, total: 2min 43s\n",
-      "Wall time: 57.4 s\n"
+      "peak memory: 6736.11 MiB, increment: 1896.00 MiB\n",
+      "CPU times: user 1min 20s, sys: 8.44 s, total: 1min 28s\n",
+      "Wall time: 32.5 s\n"
      ]
     }
    ],
@@ -375,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floating-worse",
+   "id": "boolean-willow",
    "metadata": {},
    "source": [
     "### 5.2 Description"
@@ -383,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inclusive-today",
+   "id": "temporal-windows",
    "metadata": {},
    "source": [
     "* We investigated two approaches,first using chunks and second using dask.\n",
@@ -396,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "closed-subject",
+   "id": "exciting-volunteer",
    "metadata": {},
    "source": [
     "## 6. Perform a simple EDA in R\n",
@@ -410,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "activated-heart",
+   "id": "tired-serve",
    "metadata": {},
    "source": [
     "### Reasons to choose **feather**\n",
@@ -426,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tough-variation",
+   "id": "found-literacy",
    "metadata": {},
    "source": [
     "### 6.1 Use Feather to transfer the dataframe from Python to R "
@@ -434,8 +430,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "southeast-legend",
+   "execution_count": 12,
+   "id": "maritime-blast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,10 +445,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "committed-accident",
+   "execution_count": 13,
+   "id": "guided-roulette",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "R[write to console]: \n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "\n",
+      "R[write to console]: The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "R[write to console]: The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%%R\n",
     "library(arrow)\n",
@@ -462,10 +479,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "latest-montreal",
+   "execution_count": 14,
+   "id": "lesser-baking",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 9589.81 MiB, increment: 4070.66 MiB\n",
+      "CPU times: user 21.1 s, sys: 3.07 s, total: 24.1 s\n",
+      "Wall time: 22.3 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "%%memit\n",
@@ -475,10 +502,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "sustainable-taste",
+   "execution_count": 15,
+   "id": "earlier-proportion",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.49 s, sys: 973 ms, total: 5.46 s\n",
+      "Wall time: 2.53 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Write in feather format\n",
@@ -487,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "green-craps",
+   "id": "hydraulic-alignment",
    "metadata": {},
    "source": [
     "### 6.2 Perform a simple EDA in R"
@@ -495,10 +531,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "tribal-fisher",
+   "execution_count": 16,
+   "id": "collaborative-glenn",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"tbl_df\"     \"tbl\"        \"data.frame\"\n",
+      "Time difference of 5.528802 secs\n",
+      "\u001b[90m# A tibble: 27 x 2\u001b[39m\n",
+      "   model                  n\n",
+      "   \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m              \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m\n",
+      "\u001b[90m 1\u001b[39m ACCESS-CM2       1\u001b[4m9\u001b[24m\u001b[4m3\u001b[24m\u001b[4m2\u001b[24m840\n",
+      "\u001b[90m 2\u001b[39m ACCESS-ESM1-5    1\u001b[4m6\u001b[24m\u001b[4m1\u001b[24m\u001b[4m0\u001b[24m700\n",
+      "\u001b[90m 3\u001b[39m AWI-ESM-1-1-LR    \u001b[4m9\u001b[24m\u001b[4m6\u001b[24m\u001b[4m6\u001b[24m420\n",
+      "\u001b[90m 4\u001b[39m BCC-CSM2-MR      3\u001b[4m0\u001b[24m\u001b[4m3\u001b[24m\u001b[4m5\u001b[24m340\n",
+      "\u001b[90m 5\u001b[39m BCC-ESM1          \u001b[4m5\u001b[24m\u001b[4m5\u001b[24m\u001b[4m1\u001b[24m880\n",
+      "\u001b[90m 6\u001b[39m CanESM5           \u001b[4m5\u001b[24m\u001b[4m5\u001b[24m\u001b[4m1\u001b[24m880\n",
+      "\u001b[90m 7\u001b[39m CMCC-CM2-HR4     3\u001b[4m5\u001b[24m\u001b[4m4\u001b[24m\u001b[4m1\u001b[24m230\n",
+      "\u001b[90m 8\u001b[39m CMCC-CM2-SR5     3\u001b[4m5\u001b[24m\u001b[4m4\u001b[24m\u001b[4m1\u001b[24m230\n",
+      "\u001b[90m 9\u001b[39m CMCC-ESM2        3\u001b[4m5\u001b[24m\u001b[4m4\u001b[24m\u001b[4m1\u001b[24m230\n",
+      "\u001b[90m10\u001b[39m EC-Earth3-Veg-LR 3\u001b[4m0\u001b[24m\u001b[4m3\u001b[24m\u001b[4m7\u001b[24m320\n",
+      "\u001b[90m# … with 17 more rows\u001b[39m\n",
+      "CPU times: user 7.06 s, sys: 4 s, total: 11.1 s\n",
+      "Wall time: 5.56 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "%%R\n",
@@ -518,10 +579,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "afraid-chart",
+   "execution_count": 17,
+   "id": "prospective-correction",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[90m# A tibble: 92,010 x 2\u001b[39m\n",
+      "   time                    n\n",
+      "   \u001b[3m\u001b[90m<dttm>\u001b[39m\u001b[23m              \u001b[3m\u001b[90m<int>\u001b[39m\u001b[23m\n",
+      "\u001b[90m 1\u001b[39m 1888-12-31 \u001b[90m19:00:00\u001b[39m    28\n",
+      "\u001b[90m 2\u001b[39m 1889-01-01 \u001b[90m07:00:00\u001b[39m  \u001b[4m1\u001b[24m330\n",
+      "\u001b[90m 3\u001b[39m 1889-01-01 \u001b[90m19:00:00\u001b[39m    28\n",
+      "\u001b[90m 4\u001b[39m 1889-01-02 \u001b[90m07:00:00\u001b[39m  \u001b[4m1\u001b[24m330\n",
+      "\u001b[90m 5\u001b[39m 1889-01-02 \u001b[90m19:00:00\u001b[39m    28\n",
+      "\u001b[90m 6\u001b[39m 1889-01-03 \u001b[90m07:00:00\u001b[39m  \u001b[4m1\u001b[24m330\n",
+      "\u001b[90m 7\u001b[39m 1889-01-03 \u001b[90m19:00:00\u001b[39m    28\n",
+      "\u001b[90m 8\u001b[39m 1889-01-04 \u001b[90m07:00:00\u001b[39m  \u001b[4m1\u001b[24m330\n",
+      "\u001b[90m 9\u001b[39m 1889-01-04 \u001b[90m19:00:00\u001b[39m    28\n",
+      "\u001b[90m10\u001b[39m 1889-01-05 \u001b[90m07:00:00\u001b[39m  \u001b[4m1\u001b[24m330\n",
+      "\u001b[90m# … with 92,000 more rows\u001b[39m\n"
+     ]
+    }
+   ],
    "source": [
     "%%R\n",
     "\n",
@@ -532,22 +614,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "religious-panic",
+   "id": "unknown-interim",
    "metadata": {},
    "source": [
     "### 6.3 Discussion\n",
     "\n",
-    "There is no difference in terms of the counts for models between the EDA results using Python and R. When comparing the running time, it seems like using R is faster than the speed performed using Python. "
+    "When comparing the running time, it seems like using R is faster than the speed performed using Python. There is no difference in terms of the counts for models between the EDA results using Python and R. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "manufactured-lease",
+   "id": "adjacent-veteran",
    "metadata": {},
    "source": [
     "### Summary\n",
     "\n",
-    "There are several challenges the team faced when dealing with large data sets. We can only perform limited and simple EDA with a local machine since large-scale data is very costive to visualize and calculate using complex matrics and evaluation. It is a bit frustrating to run every cell in the Jupyter notebook in our local machine as it will take a lot of time and might be stuck for a while. Besides, downloading files and deleting them would not be efficient enough as a repeating process to trigger the whole data processing.   "
+    "There are several challenges the team faced when dealing with large data sets. We can only perform limited and simple EDA with a local machine since large-scale data is very costly to visualize and calculate using complex matrics and evaluation. It is highly inconvenient to run every cell in the Jupyter notebook in our local machine as it would take a lot of time and consume majority of RAM leading to crashing of the kernel as well. Also, downloading and storing the huge files that is not optimised for processing would not be efficient in terms of time and computer resources.   "
    ]
   }
  ],
@@ -567,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
