--- a/notebooks/Milestone3-Task4.ipynb
+++ b/notebooks/Milestone3-Task4.ipynb
@@ -125,7 +125,7 @@
     }
    ],
    "source": [
-    "aws_credentials ={\"key\": \"AKIATB63UHM3AWWYGU5G\",\"secret\": \"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\"}\n",
+    "aws_credentials ={\"key\": \"\",\"secret\": \"\"}\n",
     "## here 100 data points for testing the code\n",
     "pandas_df = pd.read_csv(\"s3://mds-s3-student55/output/ml_data_SYD.csv\", storage_options=aws_credentials, index_col=0, parse_dates=True).iloc[:100].dropna()\n",
     "feature_cols = list(pandas_df.drop(columns=\"observed rainfall\").columns)"
