--- a/notebooks/Milestone3.ipynb
+++ b/notebooks/Milestone3.ipynb
@@ -66,7 +66,7 @@
    "id": "c78d0296",
    "metadata": {},
    "source": [
-    "<img src=\"img/milestone3_ex1.png\" alt=\"\" height=\"900\" width=\"900\"> "
+    "<img src=\"img/milestone3_ex1.PNG\" height=\"900\" width=\"900\"> "
    ]
   },
   {
@@ -99,7 +99,7 @@
    "id": "881405f6",
    "metadata": {},
    "source": [
-    "<img src=\"img/milestone3_ex2.png\" alt=\"\" height=\"900\" width=\"900\"> "
+    "<img src=\"img/milestone3_ex2.PNG\" height=\"900\" width=\"900\"> "
    ]
   },
   {
